# MakeEpoll

./: CMakeLists.txt  GameServer.ini  README.md
GameServer/: CMakeLists.txt  Define.h  GameServer.cpp  GameService.cpp  GameService.h  ServiceMain.cpp  ServiceMain.h
GameServer/Manager/: CMakeLists.txt  PacketManager.cpp  PacketManager.h  UserManager.cpp  UserManager.h
GameServer/Object/: CMakeLists.txt  User.cpp  User.h  WaitPacketData.cpp  WaitPacketData.h
GameServer/Packet/: CMakeLists.txt  PacketDef.h  PacketLogin.h  PacketRecvChat.h  PacketSendChat.h
